--- a/kernfields_through_time.Rmd
+++ b/kernfields_through_time.Rmd
@@ -17,51 +17,55 @@ library(janitor)
 
 ```{r}
 #read in data
+#must have the following file path in working directory: data/kernfields/kernYEAR/kernYEAR.shp
 
-kern_16 <- read_sf(here("data", "kernfields", "kern2016", "kern2016.shp"))
+#create list of years
+kern_field_layers <- c(2016:2019)
 
-crs(kern_16)
+#loop through read in process
+for (i in kern_field_layers) {
+  filename <- paste0("kernfields_", i)
+  wd <- paste0("data/kernfields/kern", i, "/kern", i, ".shp")
+  assign(filename, read_sf(wd))
+}
 
-kern_16 <- st_make_valid(kern_16)
-
-kern_17 <- read_sf(here("data", "kernfields", "kern2017", "kern2017.shp"))
-
-crs(kern_17)
-
-kern_17 <- st_make_valid(kern_17)
-
-kern_18 <- read_sf(here("data", "kernfields", "kern2018", "kern2018.shp"))
-
-crs(kern_18)
-
-kern_18 <- st_make_valid(kern_18)
-
-kern_19 <- read_sf(here("data", "kernfields", "kern2019", "kern2019.shp"))
-
-kern_crs <-crs(kern_19)
-
-kern_19 <- st_make_valid(kern_19)
-
+#read in kern county shapefile
 kern_county <- read_sf(here("data", "Kern_County_Boundary", "Kern_County_Boundary.shp")) %>% 
-  st_transform(., kern_crs)
+  st_transform(crs = crs(kernfields_2016))
 ```
 
 ```{r}
 #clean names, make sure each polygon has same number of rows
 
-kern_16_clean <- kern_16 %>% 
+kern_16_clean <- kernfields_2016 %>% 
   clean_names() %>% 
   mutate(symbol = NA) %>% 
-  mutate(comm_code = NA)
+  mutate(comm_code = NA) %>% 
+  mutate(year = 2016)
 
-kern_17_clean <- kern_17 %>% 
-  clean_names()
+kern_17_clean <- kernfields_2017 %>% 
+  clean_names() %>% 
+  mutate(year = 2017)
 
-kern_18_clean <- kern_18 %>% 
-  clean_names()
+kern_18_clean <- kernfields_2018 %>% 
+  clean_names() %>% 
+  mutate(year = 2018)
 
-kern_19_clean <- kern_19 %>% 
-  clean_names
+kern_19_clean <- kernfields_2019 %>% 
+  clean_names()  %>% 
+  mutate(year = 2019)
+
+
+#bind all rows,dissolve (union) boundaries
+kern_binded <- rbind(kern_16_clean, kern_17_clean, kern_18_clean, kern_19_clean) %>% 
+  st_union()
+
+#plot
+plot(st_geometry(kern_binded))
+
+#write to sf
+#st_write(kern_binded, here("data", "shapefiles_written", "unioned_fields_20162019"), driver = "ESRI Shapefile")
+
 ```
 
 ```{r}
@@ -74,13 +78,11 @@ kern_subset <- kern_19_clean %>%
 plot(kern_subset["p_status"])
 
 #crop
-kern_19_crop <- st_crop(kern_19_clean, kern_subset) %>% 
-  mutate(ID = 479:937)
+kern_19_crop <- st_crop(kern_19_clean, kern_subset)
 
 plot(kern_19_crop["p_status"])
 
-kern_18_crop <- st_crop(kern_18_clean, kern_subset) %>% 
-  mutate(ID = 1:478)
+kern_18_crop <- st_crop(kern_18_clean, kern_subset)
 
 kern_county_crop <- st_crop(kern_county, kern_subset)
 
@@ -88,33 +90,36 @@ plot(kern_county_crop["FID"])
 ```
 
 ```{r}
-kern_18_intersection <-
-  st_join(kern_18_crop, kern_19_crop)
+# Convert to tibble for a dplyr full join on the geometry column.
+kern1819_intersect <- full_join(as_tibble(kern_18_crop), as_tibble(kern_19_crop), by = "geometry")
 
-kern_19_to_merge <- kern_19_crop %>% 
-  filter(!ID %in% kern_18_intersection$ID.1)
-
-plot(kern_19_to_merge ["p_status"])
-
-kern1819_intersect <- st_union(kern_19_intersection, kern_19_to_merge)
+kern_1819_sf <- st_as_sf(kern_18_intersection)
 ```
 
 ```{r}
 #DOES NOT WORK, IS DROPPING NON INTERSECTING POLYGONS
-plot(kern1819_intersect ["p_status"], main = "Intersect")
+
 plot(kern_19_crop["p_status"], main = "2019")
 plot(kern_18_crop["p_status"], main = "2018")
+plot(kern_1819_sf ["p_status.x"], main = "Intersect")
 ```
 
 ```{r}
 library(stampr)
-
 library(sp)
 
-kern_18_crop_sp <- as(kern_18_crop, "Spatial")
+croped_fields_binded <- rbind(kern_18_crop, kern_19_crop) %>% 
+  st_make_valid() %>% 
+  rownames_to_column(var="ID")
 
-kern_19_crop_sp <- as(kern_19_crop, "Spatial")
 
-stamp(kern_18_crop_sp, kern_18_crop_sp)
+cropped_sp <- as(croped_fields_binded, "Spatial")
 
+stamp_test <- stamp.multichange(cropped_sp, changeByField = T, changeField = "year", dc = 0, distance = TRUE, direction = F)
+
+stamp_test_sf <- st_as_sf(stamp_test)
+
+plot(stamp_test_sf["GROUP"])
+
+st_write(stamp_test_sf, here("data", "shapefiles_written", "stamp_test.shp"), driver = "ESRI Shapefile")
 ```
