worked on conservation exploration a bit more. need to explore soil type

--- a/conservation_areas.Rmd
+++ b/conservation_areas.Rmd
@@ -32,8 +32,65 @@ proj_crs <- st_crs(easements)
 farms <- read_sf(here("data", "shapefiles_written", "unioned_fields_20162019", "unioned_fields_20162019.shp")) %>% 
   st_transform(crs = proj_crs)
 
-#check units on farms
-st_crs(farms)$units
+#read in kern county shapefile
+kern_county <- read_sf(here("data", "Kern_County_Boundary")) %>% 
+  st_transform(crs = proj_crs)
+
+#read in soil data
+soil_quality <- read_sf(here("R_input", "spatial", "SSURGOsoil", "kern_soil.gpkg"))
+soil_quality_factX <- read_sf(here("R_input", "spatial", "SSURGOsoil", "kern_soil_factX.gpkg"))
+```
+
+```{r}
+#get protected areas within 100m of farms
+easements_kern <- st_intersection(easements, kern_county)
+holdings_kern <- st_intersection(protected_areas_holdings, kern_county)
+superunits_kern <- st_intersection(protected_areas_superunits, kern_county)
+units_kern <- st_intersection(protected_areas_units, kern_county)
+
+#get gap status 1, 2, 3, or pre 1950s conservation areas
+#also make col names consistent
+
+long_easements <- easements_kern %>% 
+  filter(gapcat <= 3 | year_est %in% c(1:1950)) %>% 
+  clean_names() %>% 
+  mutate("unit_id" = e_hold_id,
+         "unit_name" =  sitename,
+         "agncy_name" = esmthldr,
+         "yr_est" =  year_est,
+         type = "easement") %>% 
+  select(type, unit_id, unit_name, agncy_name, yr_est, gap1_acres, gap2_acres, gap3_acres, gap4_acres)
+
+long_holdings <- holdings_kern %>% 
+  filter(GAP1_acres > 0 | GAP2_acres > 0 | GAP3_acres > 0 | YR_EST %in% c(1:1950)) %>% 
+  clean_names() %>%
+  mutate(type = "holding") %>% 
+  select(type, unit_id, unit_name, agncy_name, yr_est, gap1_acres, gap2_acres, gap3_acres, gap4_acres)
+
+long_superunits <- superunits_kern %>% 
+  filter(GAP1_acres > 0 | GAP2_acres > 0 | GAP3_acres > 0 | YR_EST %in% c(1:1950)) %>% 
+  clean_names() %>% 
+  mutate("unit_id" = suid_nma,
+         "unit_name" =  park_name,
+         "agncy_name" = mng_agency,
+         type = "superunit") %>% 
+  select(type, unit_id, unit_name, agncy_name, yr_est, gap1_acres, gap2_acres, gap3_acres, gap4_acres)
+  
+long_units <- units_kern %>% 
+  filter(GAP1_acres > 0 | GAP2_acres > 0 | GAP3_acres > 0 | YR_EST %in% c(1:1950))  %>% 
+  clean_names() %>%
+  mutate(type = "unit") %>% 
+  select(type, unit_id, unit_name, agncy_name, yr_est, gap1_acres, gap2_acres, gap3_acres, gap4_acres)
+
+#bind together
+kern_conservation_areas <- rbind(long_easements, long_holdings, long_superunits, long_units)
+
+plot(st_geometry(kern_conservation_areas))
+```
+
+```{r}
+#explore soil quality in the conservation area
+
 ```
 
 ```{r}
@@ -45,55 +102,9 @@ plot(st_geometry(farms_buffered))
 ```
 
 ```{r}
-#get protected areas within 100m of farms
-easements_near_farms <- st_intersection(easements, farms_buffered)
-holdings_near_farms <- st_intersection(protected_areas_holdings, farms_buffered)
-superunits_near_farms <- st_intersection(protected_areas_superunits, farms_buffered)
-units_near_farms <- st_intersection(protected_areas_units, farms_buffered)
-
-#get gap status 1, 2, 3, or pre 1950s conservation areas
-#also make col names consistent
-long_easements <- easements_near_farms %>% 
-  filter(gapcat <= 3 | year_est %in% c(1:1950)) %>% 
-  clean_names() %>% 
-  mutate("unit_id" = e_hold_id,
-         "unit_name" =  sitename,
-         "agncy_name" = esmthldr,
-         "yr_est" =  year_est) %>% 
-  select(unit_id, unit_name, agncy_name, yr_est, gap1_acres, gap2_acres, gap3_acres, gap4_acres)
-
-long_holdings <- holdings_near_farms %>% 
-  filter(GAP1_acres > 0 | GAP2_acres > 0 | GAP3_acres > 0 | YR_EST %in% c(1:1950)) %>% 
-  clean_names() %>% 
-  select(unit_id, unit_name, agncy_name, yr_est, gap1_acres, gap2_acres, gap3_acres, gap4_acres)
-
-long_superunits <- superunits_near_farms %>% 
-  filter(GAP1_acres > 0 | GAP2_acres > 0 | GAP3_acres > 0 | YR_EST %in% c(1:1950)) %>% 
-  clean_names() %>% 
-  mutate("unit_id" = suid_nma,
-         "unit_name" =  park_name,
-         "agncy_name" = mng_agency) %>% 
-  select(unit_id, unit_name, agncy_name, yr_est, gap1_acres, gap2_acres, gap3_acres, gap4_acres)
-  
-long_units <- units_near_farms %>% 
-  filter(GAP1_acres > 0 | GAP2_acres > 0 | GAP3_acres > 0 | YR_EST %in% c(1:1950))  %>% 
-  clean_names() %>% 
-  select(unit_id, unit_name, agncy_name, yr_est, gap1_acres, gap2_acres, gap3_acres, gap4_acres)
-
-#bind together
-conservation_areas <- rbind(long_easements, long_holdings, long_superunits, long_units)
+# #map it
+# tmap_mode("view")
+# 
+# tm_shape(conservation_areas) +
+#   tm_polygons("unit_name", legend.show = FALSE)
 ```
-
-```{r}
-#map it
-tmap_mode("view")
-
-tm_shape(conservation_areas) +
-  tm_polygons("unit_name", legend.show = FALSE)
-```
-
-```{r}
-#explore soil quality in the conservation area
-
-```
-
